force-app/main/default/objects/AIPromptTemplate__c/AIPromptTemplate__c.object-meta.xml
<CustomObject>
    <description>Stores AI prompt configurations used by AI Agent records. Supports multiple Prompt Template records per Agent, dynamically selected at runtime based on Activation Criteria evaluated against the related record (e.g. Opportunity or Loan Application fields), enabling tailored AI behavior for different customer scenarios</description>
    <label>AI Prompt Template</label>
    <nameField>
        <label>AI Prompt Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>📝 AI Prompt Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>