force-app/main/default/objects/AIPromptTemplate__c/fields/ActivationCriteria__c.field-meta.xml
<CustomField>
    <fullName>ActivationCriteria__c</fullName>
    <description>When to use this template, as JSON written by the Agent Wizard: {&quot;logic&quot;:&quot;any|all&quot;,&quot;conditions&quot;:[{&quot;field&quot;:&quot;StageName&quot;,&quot;operator&quot;:&quot;equals&quot;,&quot;value&quot;:&quot;Proposal&quot;}]}. Blank means no criteria - the catch-all template.</description>
    <inlineHelpText>Set in the Agent Wizard under &quot;When to use this template&quot;. Templates are checked most specific first.</inlineHelpText>
    <label>Activation Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>