force-app/main/default/objects/AIPromptTemplate__c/fields/AIAgent__c.field-meta.xml
<CustomField>
    <fullName>AIAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this Prompt Template to the AI Agent it belongs to. The Agent&apos;s standing guardrails apply automatically to every Prompt Template assigned to it.</description>
    <inlineHelpText>Select the Agent this template is assigned to. This template will only be considered for selection when that Agent is active in a conversation, and will inherit its Agent&apos;s settings automatically</inlineHelpText>
    <label>AI Agent</label>
    <referenceTo>AIAgent__c</referenceTo>
    <relationshipLabel>AI Prompt Templates</relationshipLabel>
    <relationshipName>AIPromptTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>