force-app/main/default/objects/AIPromptTemplate__c/fields/AIExclusionRules__c.field-meta.xml
<CustomField>
    <fullName>AIExclusionRules__c</fullName>
    <description>States specific things the AI should avoid saying or doing when this template is active, distinct from the agent&apos;s standing prohibited content rules.</description>
    <inlineHelpText>Describe anything this specific scenario needs the AI to avoid, such as stating an exact figure or making a particular assumption. General compliance and prohibited content rules are already handled at the agent level - use this only for exclusions specific to this template.</inlineHelpText>
    <label>AI Exclusion Rules</label>
    <type>TextArea</type>
</CustomField>