force-app/main/default/objects/AIPromptTemplate__c/fields/AIPrompt__c.field-meta.xml
<CustomField>
    <fullName>AIPrompt__c</fullName>
    <description>The core instruction content sent to the AI when this template is active, defining what the AI should focus on, include, and prioritise for this specific scenario.</description>
    <inlineHelpText>Write the actual guidance the AI should follow for this scenario - what to focus on, what to include, and how to structure its response. Agent-level compliance and sensitivity rules are applied automatically; no need to repeat them here.</inlineHelpText>
    <label>AI Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>