force-app/main/default/objects/AIPromptTemplate__c/fields/AISystemContext__c.field-meta.xml
<CustomField>
    <fullName>AISystemContext__c</fullName>
    <description>Describes the situational or record-based context this prompt template is designed for, so the AI understands why this variant was selected before it starts generating a response.</description>
    <inlineHelpText>Describe the scenario this template is for and the record conditions that should trigger it, so both admins and the AI understand when this variant applies.</inlineHelpText>
    <label>AI System Context</label>
    <type>TextArea</type>
</CustomField>