force-app/main/default/objects/AIPromptTemplate__c/fields/AITone__c.field-meta.xml
<CustomField>
    <fullName>AITone__c</fullName>
    <description>Describes the tone and communication style the AI should adopt when this template is selected, allowing nuanced, scenario-specific phrasing rather than a fixed set of options.</description>
    <inlineHelpText>Describe how the AI should sound when this template is active - for example, how formal, warm, or direct it should be</inlineHelpText>
    <label>AI Tone</label>
    <type>TextArea</type>
</CustomField>