force-app/main/default/objects/AIPromptTemplate__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A summary of what this template variant is for and when it should be used, intended for admins configuring or reviewing templates.</description>
    <inlineHelpText>Briefly explain the purpose of this template so someone reviewing the configuration later understands its intent without reading the full prompt.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>