force-app/main/default/objects/AIPromptTemplate__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this template is currently eligible for selection at runtime.</description>
    <inlineHelpText>Turn this off to retire or pause a template without deleting it. Inactive templates are never selected, regardless of Activation Criteria.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>