force-app/main/default/objects/AIPromptTemplate__c/fields/MaxResponseLength__c.field-meta.xml
<CustomField>
    <fullName>MaxResponseLength__c</fullName>
    <description>Caps the expected length of the AI&apos;s response, in approximate words, to keep replies concise and reduce token usage.</description>
    <inlineHelpText>Set a rough word limit to keep responses short and fast. Leave blank for no limit.</inlineHelpText>
    <label>Max Response Length</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>