force-app/main/default/objects/AIPromptTemplate__c/fields/PublicId__c.field-meta.xml
<CustomField>
    <fullName>PublicId__c</fullName>
    <description>A stable external identifier for this template, used by external systems or integrations to reference it without relying on the Salesforce record Id.</description>
    <externalId>true</externalId>
    <inlineHelpText>Set this if another system (CI pipeline, external app) needs to reference this template directly. Keep it stable — changing it will break existing references.</inlineHelpText>
    <label>Public Id</label>
    <length>36</length>
    <type>Text</type>
</CustomField>