force-app/main/default/objects/AIPromptTemplate__c/fields/TriggerKeywords__c.field-meta.xml
<CustomField>
    <fullName>TriggerKeywords__c</fullName>
    <description>A short list of keywords or phrases associated with this agent&apos;s scenario, used as a fast pre-filter when the AI is deciding how to respond.</description>
    <inlineHelpText>List a few words a user&apos;s question might contain that suggest this agent&apos;s expertise is relevant, such as &quot;credit score, arrears, declined.&quot;</inlineHelpText>
    <label>Trigger Keywords</label>
    <type>TextArea</type>
</CustomField>