force-app/main/default/objects/AIPromptTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IsActive__c</columns>
    <columns>AIAgent__c</columns>
    <columns>AITone__c</columns>
    <columns>TriggerKeywords__c</columns>
    <columns>MaxResponseLength__c</columns>
    <columns>Description__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>